@@ -16,6 +16,9 @@ Core and Builtins
 Library
 -------
 
+- Issue 27512: Fix a segfault when os.fspath() called a an __fspath__() method
+  that raised an exception. Patch by Xiang Zhang.
+
 Tests
 -----
 
